@@ -503,6 +503,12 @@ TIFFFindFieldInfo=PROCEDURE,-
 TIFFFindFieldInfoByName=PROCEDURE,-
 TIFFFieldWithName=PROCEDURE,-
 TIFFFieldWithTag=PROCEDURE,-
+TIFFFieldTag=PROCEDURE,-
+TIFFFieldName=PROCEDURE,-
+TIFFFieldDataType=PROCEDURE,-
+TIFFFieldPassCount=PROCEDURE,-
+TIFFFieldReadCount=PROCEDURE,-
+TIFFFieldWriteCount=PROCEDURE,-
 TIFFCurrentDirOffset=PROCEDURE,-
 TIFFWriteCheck=PROCEDURE,-
 TIFFRGBAImageOK=PROCEDURE,-
@@ -648,6 +654,12 @@ UNIVERSAL=TIFFFindFieldInfo
 UNIVERSAL=TIFFFindFieldInfoByName
 UNIVERSAL=TIFFFieldWithName
 UNIVERSAL=TIFFFieldWithTag
+UNIVERSAL=TIFFFieldTag
+UNIVERSAL=TIFFFieldName
+UNIVERSAL=TIFFFieldDataType
+UNIVERSAL=TIFFFieldPassCount
+UNIVERSAL=TIFFFieldReadCount
+UNIVERSAL=TIFFFieldWriteCount
 UNIVERSAL=TIFFCurrentDirOffset
 UNIVERSAL=TIFFWriteCheck
 UNIVERSAL=TIFFRGBAImageOK
