@@ -35,7 +35,6 @@
 #include <stdlib.h>
 
 #include "tiffio.h"
-#include "tif_dir.h"
 
 static char* usageMsg[] = {
 "usage: tiffset [options] filename",
@@ -118,25 +117,25 @@ main(int argc, char* argv[])
                 return 3;
 
             arg_index++;
-            if (fip->field_type == TIFF_ASCII) {
-                if (TIFFSetField(tiff, fip->field_tag, argv[arg_index]) != 1)
+            if (TIFFFieldDataType(fip) == TIFF_ASCII) {
+                if (TIFFSetField(tiff, TIFFFieldTag(fip), argv[arg_index]) != 1)
                     fprintf( stderr, "Failed to set %s=%s\n",
-                             fip->field_name, argv[arg_index] );
-            } else if (fip->field_writecount > 0
-		       || fip->field_writecount == TIFF_VARIABLE) {
+                             TIFFFieldName(fip), argv[arg_index] );
+            } else if (TIFFFieldWriteCount(fip) > 0
+		       || TIFFFieldWriteCount(fip) == TIFF_VARIABLE) {
                 int     ret = 1;
                 short   wc;
 
-                if (fip->field_writecount == TIFF_VARIABLE)
+                if (TIFFFieldWriteCount(fip) == TIFF_VARIABLE)
                         wc = atoi(argv[arg_index++]);
                 else
-                        wc = fip->field_writecount;
+                        wc = TIFFFieldWriteCount(fip);
 
                 if (argc - arg_index < wc) {
                     fprintf( stderr,
                              "Number of tag values is not enough. "
                              "Expected %d values for %s tag, got %d\n",
-                             wc, fip->field_name, argc - arg_index);
+                             wc, TIFFFieldName(fip), argc - arg_index);
                     return 4;
                 }
                     
@@ -144,7 +143,7 @@ main(int argc, char* argv[])
                         int     i, size;
                         void    *array;
 
-                        switch (fip->field_type) {
+                        switch (TIFFFieldDataType(fip)) {
                                 /*
                                  * XXX: We can't use TIFFDataWidth()
                                  * to determine the space needed to store
@@ -186,7 +185,7 @@ main(int argc, char* argv[])
                                 return 4;
                         }
 
-                        switch (fip->field_type) {
+                        switch (TIFFFieldDataType(fip)) {
                             case TIFF_BYTE:
                                 for (i = 0; i < wc; i++)
                                     ((uint8 *)array)[i] = atoi(argv[arg_index+i]);
@@ -226,49 +225,49 @@ main(int argc, char* argv[])
                                 break;
                         }
                 
-                        if (fip->field_passcount) {
-                                ret = TIFFSetField(tiff, fip->field_tag,
+                        if (TIFFFieldPassCount(fip)) {
+                                ret = TIFFSetField(tiff, TIFFFieldTag(fip),
                                                    wc, array);
-                        } else if (fip->field_tag == TIFFTAG_PAGENUMBER
-				   || fip->field_tag == TIFFTAG_HALFTONEHINTS
-				   || fip->field_tag == TIFFTAG_YCBCRSUBSAMPLING
-				   || fip->field_tag == TIFFTAG_DOTRANGE) {
-       				if (fip->field_type == TIFF_BYTE) {
-					ret = TIFFSetField(tiff, fip->field_tag,
+                        } else if (TIFFFieldTag(fip) == TIFFTAG_PAGENUMBER
+				   || TIFFFieldTag(fip) == TIFFTAG_HALFTONEHINTS
+				   || TIFFFieldTag(fip) == TIFFTAG_YCBCRSUBSAMPLING
+				   || TIFFFieldTag(fip) == TIFFTAG_DOTRANGE) {
+       				if (TIFFFieldDataType(fip) == TIFF_BYTE) {
+					ret = TIFFSetField(tiff, TIFFFieldTag(fip),
 						((uint8 *)array)[0], ((uint8 *)array)[1]);
-				} else if (fip->field_type == TIFF_SHORT) {
-					ret = TIFFSetField(tiff, fip->field_tag,
+				} else if (TIFFFieldDataType(fip) == TIFF_SHORT) {
+					ret = TIFFSetField(tiff, TIFFFieldTag(fip),
 						((uint16 *)array)[0], ((uint16 *)array)[1]);
 				}
 			} else {
-                                ret = TIFFSetField(tiff, fip->field_tag,
+                                ret = TIFFSetField(tiff, TIFFFieldTag(fip),
                                                    array);
                         }
 
                         _TIFFfree(array);
                 } else {
-                        switch (fip->field_type) {
+                        switch (TIFFFieldDataType(fip)) {
                             case TIFF_BYTE:
                             case TIFF_SHORT:
                             case TIFF_SBYTE:
                             case TIFF_SSHORT:
-                                ret = TIFFSetField(tiff, fip->field_tag,
+                                ret = TIFFSetField(tiff, TIFFFieldTag(fip),
                                                    atoi(argv[arg_index++]));
                                 break;
                             case TIFF_LONG:
                             case TIFF_SLONG:
                             case TIFF_IFD:
-                                ret = TIFFSetField(tiff, fip->field_tag,
+                                ret = TIFFSetField(tiff, TIFFFieldTag(fip),
                                                    atol(argv[arg_index++]));
                                 break;
                             case TIFF_DOUBLE:
-                                ret = TIFFSetField(tiff, fip->field_tag,
+                                ret = TIFFSetField(tiff, TIFFFieldTag(fip),
                                                    atof(argv[arg_index++]));
                                 break;
                             case TIFF_RATIONAL:
                             case TIFF_SRATIONAL:
                             case TIFF_FLOAT:
-                                ret = TIFFSetField(tiff, fip->field_tag,
+                                ret = TIFFSetField(tiff, TIFFFieldTag(fip),
                                                    (float)atof(argv[arg_index++]));
                                 break;
                             default:
@@ -277,7 +276,7 @@ main(int argc, char* argv[])
                 }
 
                 if (ret != 1)
-                    fprintf(stderr, "Failed to set %s\n", fip->field_name);
+                    fprintf(stderr, "Failed to set %s\n", TIFFFieldName(fip));
                 arg_index += wc;
             }
         } else if (strcmp(argv[arg_index],"-sf") == 0 && arg_index < argc-3) {
@@ -292,10 +291,10 @@ main(int argc, char* argv[])
             if (!fip)
                 return 3;
 
-            if (fip->field_type != TIFF_ASCII) {
+            if (TIFFFieldDataType(fip) != TIFF_ASCII) {
                 fprintf( stderr,
                          "Only ASCII tags can be set from file. "
-                         "%s is not ASCII tag.\n", fip->field_name );
+                         "%s is not ASCII tag.\n", TIFFFieldName(fip) );
                 return 5;
             }
 
@@ -312,9 +311,9 @@ main(int argc, char* argv[])
 
             fclose( fp );
 
-            if(TIFFSetField( tiff, fip->field_tag, text ) != 1) {
+            if(TIFFSetField( tiff, TIFFFieldTag(fip), text ) != 1) {
                 fprintf(stderr, "Failed to set %s from file %s\n", 
-                        fip->field_name, argv[arg_index]);
+                        TIFFFieldName(fip), argv[arg_index]);
             }
 
             _TIFFfree( text );
